# faturometro

./: .gitignore  pyproject.toml  requirements.txt  vercel.json
core/: settings.py  urls.py
faturometro/: admin.py  apps.py  models.py  views.py
faturometro/migrations/: 0001_initial.py  0002_venda_painel_alter_venda_dt_created.py
